--- a/code/TX_dw_collating.Rmd
+++ b/code/TX_dw_collating.Rmd
@@ -76,6 +76,11 @@ TX_demographic[[4]] <- svi
 TX_demographic[[5]] <- cvi
 names(TX_demographic) <- c("census", "cejst", "ejscreen", "svi", "cvi")
 saveRDS(TX_demographic, file="./data/raw/TX_demographic_list.RData")
+put_object(
+  file = "./data/raw/TX_demographic_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_demographic_list.RData",
+  bucket = "tech-team-data",
+)
 ```
 ## Environmental
 ```{r}
@@ -214,7 +219,11 @@ names(TX_enviro_surface) <- c("surface_water_intakes", "rivers", "reservoirs",
                               "reservoir_levels_recent", "reservoir_levels_10yr", 
                               "major_river_basins", "impaired_basins")
 saveRDS(TX_enviro_surface, file="./data/raw/TX_enviro_surface_list.RData")
-
+put_object(
+  file = "./data/raw/TX_enviro_surface_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_enviro_surface_list.RData",
+  bucket = "tech-team-data",
+)
 
 # ground water: 
 TX_enviro_ground <- list()
@@ -229,6 +238,11 @@ names(TX_enviro_ground) <- c("minor_aquifers", "major_aquifers",
                               "well_levels_recent", "well_levels_historic", 
                               "well_quality_historic")
 saveRDS(TX_enviro_ground, file="./data/raw/TX_enviro_ground_list.RData")
+put_object(
+  file = "./data/raw/TX_enviro_ground_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_enviro_ground_list.RData",
+  bucket = "tech-team-data",
+)
 ```
 ## Water Delivery System
 ```{r}
@@ -348,6 +362,11 @@ names(TX_water_delivery) <- c("sdwis", "tceq_viols",
                               "TXSWP_supp", "TXSWP_needs", "TXSWP_strat")
 
 saveRDS(TX_water_delivery, file="./data/raw/TX_water_delivery_list.RData")
+put_object(
+  file = "./data/raw/TX_water_delivery_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_water_delivery_list.RData",
+  bucket = "tech-team-data",
+)
 ```
 ## Financial 
 ```{r}
@@ -400,150 +419,12 @@ names(TX_financial) <- c("TX_affordability_DAC", "TX_PPL",
                          "SRF_analysis")
 
 saveRDS(TX_financial, file="./data/raw/TX_financial_list.RData")
+put_object(
+  file = "./data/raw/TX_financial_list.RData",
+  object = "/state-drinking-water/TX/clean/TX_financial_list.RData",
+  bucket = "tech-team-data",
+)
 ```
-
-## Loading lists 
-```{r}
-# reading demographic, environmental (gw and sw), water delivery system (wds)
-# and financial lists generated above: 
-demo <- readRDS("./data/raw/TX_demographic_list.RData")
-enviro_sw <- readRDS("./data/raw/TX_enviro_surface_list.RData")
-enviro_gw <- readRDS("./data/raw/TX_enviro_ground_list.RData")
-wds <- readRDS("./data/raw/TX_water_delivery_list.RData")
-fin <- readRDS("./data/raw/TX_financial_list.RData")
-```
-
-## Merging: surface water (reservoirs, rivers, basins) to pwsids:
-```{r}
-# merging impaired water bodies with basin information: 
-basins <- enviro_sw$major_river_basins %>% 
-  left_join(., enviro_sw$impaired_basins, by = "basin_num") %>%
-  rename(basin_name_short = basin_name.x, 
-         basin_name_long = basin_name.y) %>%
-  select(!c("id", "label_no"))
-
-# st_intersection with reservoir boundaries to identify which reservoirs 
-# are in what basin: 
-res <- enviro_sw$reservoirs %>%
-  # dropping z coordinates: 
-  st_zm(., drop = TRUE) %>%
-  st_as_sf(.) %>%
-  st_transform(., crs = st_crs(basins)) 
-# switch off spherical geometry 
-sf_use_s2(FALSE)
-res_basin <- st_intersection(res, basins)
-
-# st_intersection with rivers to identify which basin they fall under: 
-rivers <- enviro_sw$rivers %>%
-  mutate(name = toupper(name)) %>%
-  rename(river_name = name)
-riv_basin <- st_intersection(rivers, basins) %>%
-  select(river_name:geometry) %>%
-  select(-shape_len) %>%
-  rename(res_name = river_name) %>%
-  mutate(type = "River", 
-         status = "Existing") %>%
-  unique()
-
-# combining rivers and reservoirs: 
-riv_res_basin <- rbind(riv_basin, res_basin)
-
-# matching reservoir, basins, and river with surface water intakes: 
-sw <- enviro_sw$surface_water_intakes %>%
-  select(-objectid) %>%
-  rename()
-
-sw_basins <- merge(riv_res_basin, sw, by.x = "res_name", by.y = "waterbody",
-                   all = TRUE) %>%
-  # removing reservoirs that are not a water supply (and therefore 
-  # no matching sw_intake)
-  filter(type == "Water Supply" | is.na(type) | type == "River")
-# missing pwsid = reservoir or river that might not have a surface water intake 
-# missing type = pwsid that does not match to a reservoir or river
-
-# plotting surface water intakes to visualize gaps
-points_sf <- sw_basins %>%
-  as.data.frame() %>%
-  select(-geometry) %>%
-  filter(!(is.na(lat_dd)))  %>%
-  st_as_sf(., coords = c("long_dd", "lat_dd"), 
-           crs = st_crs(res_basin)) 
-         
-# where are we missing the links between surface water intakes and pwsids? 
-viol_pal <- colorFactor(
-  palette = viridis::plasma(23),
-  domain = basins$baisn_name_short)
-
-leaflet() %>%
-  addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = basins,
-              opacity = 9,
-              color = ~viol_pal(basin_name_short),
-              weight = 1,
-              label = paste0("basin: ", basins$basin_name_short)) %>%
-  addLegend("bottomright",
-            pal = viol_pal,
-            values = basins$basin_name_short,
-            title = "Basin",
-            opacity = 1) %>%
-  addPolygons(data = res_basin,
-              opacity = 9,
-              color = ~viol_pal(basin_name_short),
-              weight = 1,
-              label = paste0("res: ", res_basin$res_name, "; basin: ",
-                             res_basin$basin_name_short)) %>%
-  addCircleMarkers(data = points_sf, 
-                   fill = ~viol_pal(basin_name_short), 
-                   color = ~viol_pal(basin_name_short), 
-                   weight = 3, 
-                   opacity = 9, 
-                   radius = 3, 
-                   label = paste0("pwsid: ", points_sf$pwsid, "; waterbody: ", 
-                                  points_sf$res_name, 
-                                  "; basin name: ", 
-                                  points_sf$basin_name_short)) %>%
-  addPolylines(data = riv_basin,
-               opacity = 9,
-               color = ~viol_pal(basin_name_short),
-               weight = 2,
-               label = paste0("river: ", riv_basin$res_name))
-  
-# TODO: need some fuzzy string matching with reservoirs and nearby 
-# surface water intakes 
-
-# crosswalking key - completing this step once initial merging is complete
-# cross_key <- sab_census %>%
-#   as.data.frame(.) %>%
-#   select(pwsid:county_served) 
-
-```
-
-## East TX counties
-```{r}
-east_tx <- read.csv("./data/raw/east_TX_counties.csv") %>%
-  select(-X)
-
-# grabbing census geographies: 
-east_tx_geom <- census_tidy %>%
-  filter(counties %in% paste0(east_tx$county_name, " County")) %>%
-  group_by(counties) %>%
-  summarize()
-
-# also grabbing the larger geography of TX
-tx_geom <- census_tidy %>%
-  summarize()
-
-leaflet() %>%
-  addProviderTiles(providers$CartoDB.VoyagerNoLabels, group = "Toner Lite") %>%
-  addPolygons(data = tx_geom, 
-              color = "grey", 
-              weight = 1) %>%
-  addPolygons(data = east_tx_geom,
-              opacity = 9,
-              color = "#333c6bff",
-              weight = 1)
-```
-
 
 NEXT STEPS: 
 questions: 
